Spoiler component summary element display changed to CSS grid in order to fix overflow issues (this also allows to have perfectly shaped focus ring shape without uggly margin used)

--- a/Upnp.Control.Web/ClientApp/src/styles/_spoiler.scss
+++ b/Upnp.Control.Web/ClientApp/src/styles/_spoiler.scss
@@ -1,4 +1,4 @@
-﻿/*********** Spoiler component general styles **********/
+/*********** Spoiler component general styles **********/
 $spoiler-border-radius: var(--#{$prefix}border-radius) !default;
 $spoiler-border-width: var(--#{$prefix}border-width) !default;
 $spoiler-color: var(--#{$prefix}body-color) !default;
@@ -18,21 +18,21 @@ $spoiler-padding-y: $input-btn-padding-y !default;
     border: var(--#{$prefix}spoiler-border-width) solid var(--#{$prefix}spoiler-border-color);
 
     & > summary {
-        display: flex;
+        display: grid;
+        grid: auto / 1fr auto;
         align-items: center;
-        overflow: hidden;
         gap: var(--#{$prefix}spoiler-padding-x);
         padding: var(--#{$prefix}spoiler-padding-y) var(--#{$prefix}spoiler-padding-x);
-        margin: map-get($spacers, 1);
+        border-radius: var(--#{$prefix}spoiler-border-radius);
 
         &::-webkit-details-marker {
             display: none;
         }
 
         & > * {
-            overflow: clip;
             display: inline-flex;
             flex-wrap: wrap;
+            overflow: hidden;
             align-items: center;
             gap: var(--#{$prefix}spoiler-padding-x);
         }
@@ -50,7 +50,6 @@ $spoiler-padding-y: $input-btn-padding-y !default;
             width: 24px;
             height: 24px;
             order: 1;
-            margin-left: auto;
             content: var(--#{$prefix}expand-button-icon);
         }
     }
@@ -80,6 +79,8 @@ $spoiler-padding-y: $input-btn-padding-y !default;
     }
 
     &[open] > summary {
+        border-radius: var(--#{$prefix}spoiler-border-radius) var(--#{$prefix}spoiler-border-radius) 0 0;
+
         &::before {
             rotate: -0.5turn;
         }
