--- a/Upnp.Control.Web/ClientApp/src/styles/index.scss
+++ b/Upnp.Control.Web/ClientApp/src/styles/index.scss
@@ -30,6 +30,8 @@ $modal-content-border-radius: $border-radius-xl;
 $modal-content-border-width: 0;
 $dropdown-border-radius: $border-radius-sm;
 $list-group-border-color: 0;
+$list-group-border-width: 0;
+$list-group-bg: null;
 
 $breadcrumb-border-radius: 0;
 $breadcrumb-divider: quote("\276f");
